# pandoc-d2-filter

./: .gitignore  README.md  pandoc_d2_filter.py  pyproject.toml
tests/: test_integration.py
